@@ -1,6 +1,8 @@
 New in 0.9.10:
 --------------
 
+* Add '%reflection' option for functions, for compile-time operations on
+  syntax.
 * At the REPL, "it" now refers to the previous expression
 
 New in 0.9.9:
